--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=SUSE:wght@100..800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="shortcut icon"
+      href="imgs/Hubble_Space_Telescope_spacecraft_model.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <h1>My Favorite Satellites</h1>
